--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>HI! I'M EMILIA</h1>
-    <img src="./assets/photo.png" height="200" alt="Photo Emilia" />
+    <img src="./Assets/photo.png" height="200" alt="Photo Emilia" />
     <h2>WHO I AM</h2>
     <p>I'm proficient in <strong>affiliate marketing</strong> and <strong>product management</strong>. I'm passionate about content creation, digital marketing and, recently, coding.</p>
     <hr />
@@ -17,7 +17,7 @@
         <li><strong>Master's Degree in Japanese Language and Asian Markets</strong> (2020) - Ca' Foscari University of Venice</li>
         <li><strong>Bachelor's Degree in Japanese Language and Asian Markets</strong> (2017) - Ca' Foscari University of Venice</li>
     </ul>
-    <p><a href="./assets/Exchange-programs.html">Check out here my Exchange Programs</a></p>
+    <p><a href="./Assets/Exchange-programs.html">Check out here my Exchange Programs</a></p>
     <h2>WORK EXPERIENCE</h2>
     <ul>
         <h3><li>Product manager at beruby</li></h3>
@@ -65,7 +65,7 @@
         <li>Japanese - C1</li>
         <li>Korean - A2</li>
     </ul>
-    <h2><a href="./assets/Contacts.html">Contact Me</a></h2>
+    <h2><a href="./Assets/Contacts.html">Contact Me</a></h2>
 </body>
 <footer>© Emilia Cristante. All Rights Reserved.</footer>
 </html>
